<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">有型健身</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">正在加载更多....</string>
    <string name="load_more">加载更多</string>
    <string name="up_pull_lab">上拉加载</string>
    <string name="up_release_lab">放开以加载</string>
    <string name="back">返回</string>
    <string name="maintab_home">主页</string>
    <string name="maintab_club">俱乐部</string>
    <string name="maintab_curr">课程表</string>
    <string name="maintab_owner">我</string>
    <string name="hometab_title01">首页</string>
    <string name="hometab_title02">动态</string>
    <string name="hometab_title03">流行</string>
    <string name="currtab_self">我的课程</string>
    <string name="currtab_club">俱乐部课程</string>
    <string name="register_hint">点击上面的“注册”按钮，意味着你同意<a href="http://www.shape100.com">服务条款与隐私协议</a>。\n\n其它人可以通过你的姓名、手机号码或邮箱地址找到你，你的手机号码和邮箱地址将不会公开显示，同时你可以随时修改你的隐私设置。</string>
    <string name="register_detail_hint">请输入您的信息，有型将帮你计算<a href="http://www.shape100.com">体质指指数（BMI）</a>,它是世界公认的评定肥胖程度的指标。在和有型一起度过的日子里，你会惊奇的发现，你的身体会越来越有型！</string>

    <!-- Pull to Refresh -->
    <string name="pull_to_get_more">下拉获取更多</string>

    <!--首页文字-->
    <string name="hello">你好！</string>

    <!--主要提示-->
    <string name="toast_exit">再按一次返回键退出程序</string>


    <!--不能查看课表的提示-->
    <string name="toast_no_lookcourse">您还没有登录，无法查看课表！</string>
    <string name="toast_no_net">请检查网络是否正确！</string>


    <!-- Common String -->
    <string name="detail_info">详细信息</string>
    <string name="icon">头像</string>
    <string name="jump">跳过此步骤</string>
    <string name="find_more">[查看更多...]</string>
    <string name="cancel_filter">取消</string>
    <string name="setting">设置</string>
    <string name="clubdetail">俱乐部详情</string>
    <string name="coursedetail">课程介绍</string>
    <string name="favorite_class">喜爱的课程</string>
    <string name="favorite_coach">喜爱的教练</string>
    <string name="owner_setting">个人设置</string>

    <!-- club String -->
    <string name="clubinfo_share">分享俱乐部</string>
    <string name="join_club">加入俱乐部</string>
    <string name="exit_club">退出俱乐部</string>

    <string name="share">分享</string>
    <string name="reservation">预定</string>
    <string name="mutual_concern">共同关注</string>

    <!-- Course String -->
    <string name="favorite_course_remove">取消关注此课程</string>
    <string name="favorite_course_add">关注此课程</string>

    <!-- Hint String -->
    <string name="join_no_club">您还没有加入任何俱乐部</string>
    <string name="network_error">请检查网络是否正确！</string>
    <!-- Setting -->

    <string name="stroll">随便看看</string>
    <string name="logout">退出登录</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="no_class">无匹配课程</string>

    <!--about评论-->
    <string name="comments">评论</string>
    <string name="comments_success">评论成功</string>
    <string name="comments_failed">评论失败</string>
    <string name="comments_all">全部评论</string>
    <string name="comments_title">正文</string>
    <string name="copy_response">已复制到粘贴板</string>


    <!--fragment owner-->
    <string name="edit_data">编辑资料</string>
    <string name="dynamic_name">动态</string>
    <string name="concern_name">关注</string>
    <string name="funs_name">粉丝</string>

    <!--clubinfo==view-->
    <string name="club">俱乐部</string>
    <string name="club_address">地址:</string>
    <string name="club_timeopen">营业时间:</string>
    <string name="club_phone">电话:</string>
    <string name="club_url">网址:</string>
    <string name="club_notime_value">俱乐部还没有提供电话哦</string>
    <string name="club_call">呼叫</string>
    <string name="cancle">取消</string>

    <!-- 设置微博隐秘度界面 -->
    <string name="public_all">公开</string>
    <string name="friend_cyle">好友圈可见</string>
    <string name="private_self">仅自己可见</string>

    <!-- 设置界面 -->
    <string name="about">关于我们</string>
    <string name="serviceandarticle">服务条款与协议</string>
    <string name="str_indoor_model">室内模式</string>
    <string name="str_cancel_numble">注销手机号码（仅支持内测）</string>
    <string name="str_change_password">密码修改</string>
    <string name="str_user_feedback">用户反馈</string>

    <!-- 登陆界面的文字 -->
    <string name="toast_phone_nopass">手机号码不合法</string>
    <string name="toast_passname_nopass">密码不合法</string>
    <string name="toast_check_phone">请检查手机号或者验证码是否正确</string>

    <string name="login">登陆</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="phone_input">请输入你的手机号</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="password_prompt">输入不少于6位的密码</string>
    <string name="login_prompt">其他人可以通过手机号找到你，你的手机号码不会公开显示。你可以随时修改你的隐私设置。</string>


    <!-- 动态列表 -->
    <string name="dynamic_title">个人动态</string>
    <string name="dynamic_get_failed">获取动态失败</string>
    <string name="reply">回复</string>
    <string name="commment_hint">评论一番吧</string>
    <string name="delete">删除</string>


    <!--写博客界面-->
    <string name="send">发送</string>

    <!-- 关注列表 -->
    <string name="concern_str">+ 关注</string>
    <string name="concern_cancle_str">取消关注</string>
    <string name="concern_list">关注列表</string>

    <string name="copy">复制</string>

    <!--粉丝列表-->
    <string name="funs_list">粉丝列表</string>


    <!--常用dialog文字-->
    <string name="dialog_title">提示</string>
    <string name="dialog_delete_prompt">确定要删除吗？</string>
    <string name="confirm">确定</string>

    <!--推荐俱乐部-->
    <string name="choice_club">选择我的俱乐部</string>


    <!--个人设置界面-->
    <string name="username">用户名</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="birthday">生日</string>


    <!--课程表界面-->
    <string name="weekday1">周一</string>
    <string name="weekday2">周二</string>
    <string name="weekday3">周三</string>
    <string name="weekday4">周四</string>
    <string name="weekday5">周五</string>
    <string name="weekday6">周六</string>
    <string name="weekday7">周日</string>

    <string name="map">地图</string>
    <string name="list">列表</string>


    <string name="take_photo">拍照</string>
    <string name="get_from_album">从相册选取</string>
    <string name="date">日期</string>
</resources>