<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white_gray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_remove"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/btn_bg_white"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/color_red"
        android:textSize="16sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_white_gray" />

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/btn_bg_white"
        android:gravity="center"
        android:text="@string/copy"
        android:textColor="@color/font_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/btn_bg_white"
        android:gravity="center"
        android:text="@string/cancel_filter"
        android:textColor="@color/font_dark"
        android:textSize="16sp" />

</LinearLayout>