<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/guide03">

    <android.support.v4.view.ViewPager
        android:id="@+id/guide_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="100dip">

        <ImageView
            android:id="@+id/guide_dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dot_black" />

        <ImageView
            android:id="@+id/guide_dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dot_white" />

        <ImageView
            android:id="@+id/guide_dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dot_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guide_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dip"
            android:text="@string/stroll"
            android:textColor="@color/titlebar_bg"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dip">


            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_transparent"
                android:paddingLeft="40dip"
                android:paddingRight="40dip"
                android:textSize="16sp"
                android:paddingTop="10dip"
                android:textColor="@color/color_white"
                android:paddingBottom="10dip"
                android:gravity="center"
                android:text="@string/login" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@drawable/bg_transparent"
                android:paddingLeft="40dip"
                android:paddingRight="40dip"
                android:textColor="@color/color_white"
                android:textSize="16sp"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:gravity="center"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>